--- a/views/registrer.html
+++ b/views/registrer.html
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <title>Registro de Usuario</title>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Registro</h1>
-        <form id="registerForm">
-            <label for="username">Nombre de Usuario:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-            <label for="userType">Tipo de Usuario:</label>
-            <select id="userType" name="userType" required>
-                <option value="admin">Administrador</option>
-                <option value="teacher">Maestro</option>
-                <option value="student">Alumno</option>
-            </select>
-            <button type="submit">Registrarse</button>
-        </form>
-        <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
-    </div>
-
-    <script src="../js/scripts.js"></script>
+    <h1>Registro de Usuario</h1>
+    <form action="/register" method="POST">
+        <label for="username">Nombre de Usuario:</label>
+        <input type="text" id="username" name="username" required><br><br>
+        
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required><br><br>
+        
+        <label for="user_type">Tipo de Usuario:</label>
+        <select id="user_type" name="user_type" required>
+            <option value="admin">Administrador</option>
+            <option value="teacher">Maestro</option>
+            <option value="student">Alumno</option>
+        </select><br><br>
+        
+        <button type="submit">Registrarse</button>
+    </form>
 </body>
 </html>
