--- a/views/login.html
+++ b/views/login.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Iniciar Sesión</h1>
-        <form id="loginForm">
-            <label for="username">Nombre de Usuario:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Iniciar Sesión</button>
-        </form>
-        <p>¿No tienes una cuenta? <a href="register.html">Regístrate aquí</a></p>
-    </div>
-
-    <script src="../js/scripts.js"></script>
+    <h1>Iniciar Sesión</h1>
+    <form action="/login" method="POST">
+        <label for="username">Nombre de Usuario:</label>
+        <input type="text" id="username" name="username" required><br><br>
+        
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required><br><br>
+        
+        <button type="submit">Iniciar Sesión</button>
+    </form>
 </body>
 </html>
